# scarabee

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build_wheels.yml  ci.yml
data/: endf8.py  generate.py  libraries.py
data/container/: Dockerfile  README.md  docker-compose.yaml  install_frendy.sh
data/tools/: frendy.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: depletion.rst  diffusion.rst  geometry.rst  index.rst  materials.rst  moc.rst  tool_chains.rst
docs/source/examples/: cp_pin_cell.ipynb  moc_c5g7.ipynb  pwr_assembly_depletion.ipynb
docs/source/install/: index.rst
docs/source/releasenotes/: 0.1.0.rst  0.1.1.rst  index.rst  upcoming.rst
docs/source/theory/: self_shielding.rst
examples/: c5g7.py
examples/beavrs/: F16_0.pkl  F16_0_out.txt  F24_0.pkl  F24_0_out.txt  F24_12.pkl  F24_12_out.txt  F24_16.pkl  F24_16_out.txt  F31_0.pkl  F31_0_out.txt  F31_15II.pkl  F31_15II_out.txt  F31_16.pkl  F31_16_out.txt  F31_20.pkl  F31_20_out.txt  F31_6R.pkl  F31_6R_out.txt  assembly_16_0.py  assembly_24_0.py  assembly_24_12.py  assembly_24_16.py  assembly_31_0.py  assembly_31_15.py  assembly_31_16.py  assembly_31_20.py  assembly_31_6.py  core.py  fd_core.py  reflector.pkl
src/scarabee/: __init__.py
src/scarabee/_scarabee/: cartesian_2d.cpp  cell.cpp  cmfd.cpp  criticality_spectrum.cpp  cross_section.cpp  cylindrical_flux_solver.cpp  depletion_chain.cpp  depletion_matrix.cpp  diffusion_data.cpp  diffusion_geometry.cpp  form_factors.cpp  homogenization.cpp  leakage_corrections.cpp  legendre.cpp  logging.cpp  material.cpp  moc_driver.cpp  moc_plotter.cpp  nd_library.cpp  nem_diffusion_driver.cpp  nuclide_names.cpp  reflector_sn.cpp
src/scarabee/_scarabee/include/: cylindrical_flux_solver.hpp
src/scarabee/_scarabee/include/data/: depletion_matrix.hpp  diffusion_cross_section.hpp  material.hpp
src/scarabee/_scarabee/include/diffusion/: diffusion_data.hpp  diffusion_geometry.hpp  form_factors.hpp  leakage_corrections.hpp  nem_diffusion_driver.hpp
src/scarabee/_scarabee/include/moc/: cartesian_2d.hpp  cell.hpp  cmfd.hpp  moc_driver.hpp
src/scarabee/_scarabee/include/moc/quadrature/: legendre.hpp  polar_quadrature.hpp
src/scarabee/_scarabee/include/utils/: constants.hpp  criticality_spectrum.hpp  homogenization.hpp  logging.hpp
src/scarabee/_scarabee/python/: cell.cpp  cmfd.cpp  criticality_spectrum.cpp  cylindrical_cell.cpp  cylindrical_flux_solver.cpp  depletion_matrix.cpp  diffusion_cross_section.cpp  diffusion_data.cpp  diffusion_geometry.cpp  form_factors.cpp  init_logging_sinks.cpp  leakage_corrections.cpp  logging.cpp  material.cpp  micro_cross_sections.cpp  moc_driver.cpp  nem_diffusion_driver.cpp  polar_quadrature.cpp  scarabee.cpp
src/scarabee/coeur/: __init__.py  core_builder.py  core_form_factors.py  core_tile.py
src/scarabee/reseau/: __init__.py  _ensleeve.py  burnable_poison_rod.py  critical_leakage.py  equivalence_theory.py  fuel_pin.py  guide_tube.py  nodal_flux.py  pwr_assembly.py  reflector.py  symmetry.py
tests/integration_tests/: test_cmfd_anisotropic.py
