[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11==3.0.2",
  "mypy",
  "numpy",
  "scipy"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
sdist.exclude = ["src/scarabee/_scarabee"]
cmake.build-type = "Release"

[project]
name = "scarabee"
version = "0.1.1"
authors = [
  {name = "Hunter Belanger", email = "hunter.belanger@gmail.com"},
]
dependencies = ["numpy"]
description = "A lattice physics code for LWR analysis."
readme = "README.md"
license = "LGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["lattice physics", "reactor physics", "neutron transport", "LWR"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
]

[project.optional-dependencies]
test = ["pytest", "pytest-check", "pytest-timeout"]

[project.urls]
homepage = "https://scarabee.readthedocs.io/en/latest/"
documentation = "https://scarabee.readthedocs.io/en/latest/"
source = "https://github.com/scarabee-dev/scarabee"

[tool.cibuildwheel]
skip = ["*musllinux*", "pp*"]
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
archs = ["x86_64"]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
before-all = "apt install -y libx11-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libomp-dev mesa-common-dev libgl1-mesa-dev libglu1-mesa-dev libwayland-dev libxkbcommon-dev xorg-dev"

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.cibuildwheel.macos]
environment = {"MACOSX_DEPLOYMENT_TARGET"="10.15"}

[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64"
environment = {"MACOSX_DEPLOYMENT_TARGET"="11"}
